--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "crypto-js": "^4.2.0",
     "lucide-react": "^0.544.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
