chore: remove merge conflict markers and add android to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -95,8 +95,6 @@ tmp/
 temp/
 
 # public folder
-<<<<<<< HEAD
-public/
-=======
 # public/images/*
->>>>>>> bc49517afe54a81573d25a24999bf5a5290f8b20
+
+android/
