--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cts-merchant-react",
   "private": true,
   "version": "0.0.0",
+  "proxy": "https://dev-soundbox.ctsolution.id/",
   "type": "module",
   "scripts": {
     "dev": "vite --host",
