--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --runInBand --watchAll"
   },
   "dependencies": {
+    "boxicons": "^2.1.4",
     "crypto-js": "^4.2.0",
     "lucide-react": "^0.544.0",
     "prop-types": "^15.8.1",
