--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "boxicons": "^2.1.4",
     "crypto-js": "^4.2.0",
+    "firebase": "^12.6.0",
     "lucide-react": "^0.544.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -20,6 +21,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
     "react-toastify": "^11.0.5",
+    "workbox-precaching": "^7.4.0",
+    "workbox-window": "^7.4.0",
     "zustand": "^4.5.7"
   },
   "devDependencies": {
