--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,9 @@ VITE_APP_SECRET=
 VITE_BASE_URL=
 VITE_BASE_URL_DEV=
 VITE_REFRESH_USER_TOKEN_TIMER=
+
+# Cloudinary Image CDN Configuration
+# Get these from https://cloudinary.com/console/settings/api-keys
+VITE_CLOUDINARY_NAME=your_cloud_name
+VITE_CLOUDINARY_API_KEY=your_api_key
+VITE_CLOUDINARY_UPLOAD_PRESET=your_upload_preset
