--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host",
+    "dev": "vite --host --port 3000",
     "build": "vite build",
+    "build:analyze": "vite build && echo 'Bundle analysis available at dist/bundle-analysis.html'",
     "lint": "eslint . -c eslint.config.js --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview --host",
+    "preview": "vite preview --host --port 3000",
     "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --runInBand --watchAll"
   },
   "dependencies": {
@@ -46,8 +47,10 @@
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "postcss": "^8.4.31",
+    "rollup-plugin-visualizer": "^5.12.0",
     "tailwindcss": "^3.3.5",
     "vite": "^7.1.7",
+    "vite-plugin-compression": "^0.5.1",
     "vite-plugin-pwa": "^1.0.3"
   }
 }
